# tdx-measure

./: CODEOWNERS  Cargo.toml  Dockerfile.qemu-acpi-dump  README.md  create_acpi_tables.sh  extract_config_files.py
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs  transcript.rs
src/: acpi.rs  image.rs  kernel.rs  lib.rs  machine.rs  num.rs  tdvf.rs  util.rs
