[package]
name = "tdx-measure"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A CLI tool for calculating TDX measurements"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-human-bytes = "0.1"
hex = "0.4"
thiserror = "2.0"
sha2 = "0.10"
anyhow = "1.0"
object = "0.38"
hex-literal = "1.1"
fs-err = "3.2"
bon = "3.8"
log = "0.4"
